# Proyecto_Aventuras_Y_Mazmorras

./: CMakeLists.txt  ESTRUCTURA_CARPETAS.md  Estructura de las carpetas.md  README.md  main.cpp
data/: Enemies.txt  Items.txt  Map.txt  NPCs.txt  enemies.txt  items.txt  map.txt  rooms.txt
include/domain/: DungeonLoader.h  Enemy.h  Entity.h  Hero.h  Item.h  NPC.h  Potion.h  Room.h  Weapon.h
include/output/: Logger.h  ReportGenerator.h
include/simulation/: CombatSystem.h  SimulationEngine.h
src/domain/: DungeonLoader.cpp  Enemy.cpp  Hero.cpp  NPC.cpp  Potion.cpp  Room.cpp  Weapon.cpp
src/output/: Logger.cpp  ReportGenerator.cpp
src/simulation/: CombatSystem.cpp  SimulationEngine.cpp
